jvimalprasathdev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apt__c</fullName>
        <label>Apt#</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <label>Best Contact Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Type__c</fullName>
        <label>Current Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House__c</fullName>
        <label>House#</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_you_describe_your_credit__c</fullName>
        <label>Your estimated credit score</label>
        <picklist>
            <picklistValues>
                <fullName>740-800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>720-739</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700-719</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>680-699</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>660-679</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 660</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Extn__c</fullName>
        <label>Work Phone Extn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>My Business Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Created_Timestamp__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fax_Number_Validation_custom</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(Fax__c), false, 
    REGEX( Fax__c, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Fax__c</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Fax Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_Validation_std</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(Fax), false, 
    REGEX( Fax, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Fax Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonAssistantPhone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(PersonAssistantPhone), false, 
    REGEX( PersonAssistantPhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>PersonAssistantPhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonHomePhone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(PersonHomePhone), false, 
    REGEX( PersonHomePhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>PersonHomePhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonMobilePhone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(PersonMobilePhone), false, 
    REGEX( PersonMobilePhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>PersonMobilePhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonOtherPhone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(PersonOtherPhone), false, 
    REGEX( PersonOtherPhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>PersonOtherPhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(Phone), false, 
    REGEX( Phone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Contact_Method</fullName>
        <active>true</active>
        <description>Validate that the information has been provided for the preferred contact method</description>
        <errorConditionFormula>OR(
AND( ISPICKVAL(Preferred_Contact_Method__c , &quot;Email&quot;),
     PersonEmail=null ),
AND( ISPICKVAL(Preferred_Contact_Method__c, &quot;Home Phone&quot;),
      PersonHomePhone=null),
AND( ISPICKVAL(Preferred_Contact_Method__c, &quot;Mobile Phone&quot;),
     PersonMobilePhone=null),
AND( ISPICKVAL(Preferred_Contact_Method__c, &quot;Work Phone&quot;),
       Work_Phone__c=null))</errorConditionFormula>
        <errorMessage>Please provide information for the Preferred Contact Method selected&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Phone_Number_Validation</fullName>
        <active>true</active>
        <description>Validate that the phone number doesn&apos;t contain invalide characters</description>
        <errorConditionFormula>IF( ISNULL(Work_Phone__c), false, 
    REGEX( Work_Phone__c, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Work_Phone__c</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
</CustomObject>